src/test/deca/context/valid/avecObjet/protected_field_access_chain_ok.deca
// Description :
//    Accès à un champ protected dans une chaîne d'héritage.
//
// Resultats :
//    OK

class A {
    protected int x;
}

class B extends A {
}

class C extends B {
    void set() {
        x = 5;
    }
}

{
}

