src/test/deca/context/invalid/fields/assign_to_protected_field_custom.deca
// Description :
// tentative d'affecter un champ protected depuis une autre classe
//
// Resultats :
// Erreur contextuelle
// Ligne 12 : violation de visibilité protected

class ParentField {
    protected int val;
}

class J {
    void test() {
        ParentField p = new ParentField();
        p.val = 42; // doit échouer
    }
}
